--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,19 @@
 			<artifactId>infinispan-core</artifactId>
 			<version>7.1.1.Final</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-swagger2</artifactId>
+		    <version>2.6.1</version>
+		    <scope>compile</scope>
+		</dependency>	
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-swagger-ui</artifactId>
+		    <version>2.6.1</version>
+		    <scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
